move impl of Scanner from scanner.l to new scanner.cpp

--- a/src/efc/CMakeLists.txt
+++ b/src/efc/CMakeLists.txt
@@ -92,6 +92,7 @@ set(SRCS
   object.cpp
   objtype.cpp
   parser.cpp
+  scanner.cpp
   genparserext.cpp
   semanticanalizer.cpp
   signatureaugmentor.cpp
