start to rework ObjectType

--- a/src/efc/CMakeLists.txt
+++ b/src/efc/CMakeLists.txt
@@ -91,6 +91,8 @@ set(SRCS
   irgenforwarddeclarator.cpp
   object.cpp
   objtype.cpp
+  objtype2.cpp
+  objtypetemplate.cpp
   parser.cpp
   scanner.cpp
   genparserext.cpp
